Bug 350757 - Systemsettings Keyboard Layout switching module usability problem with "Apply" button
Summary: Systemsettings Keyboard Layout switching module usability problem with "Apply...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard_layout (other bugs)
Version First Reported In: 5.3.2
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Andriy Rysin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-29 16:46 UTC by Mike Krutov
Modified: 2015-09-26 20:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Krutov 2015-07-29 16:46:41 UTC
When I add new hotkey to language on Layout tab, "Apply" hotkey is not enabled till I click on second language in list. 

Reproducible: Always

Steps to Reproduce:
1. Have 2 or more layouts.
2. Go to Layout tab of systemsettings/input devices/keyboard.
3. Select layout. Add hotkey to that layout.
4. -- At this point, I'd expect "Apply" button to be enabled, while it is not--
5. Select other language. Only at this point "Apply" becomes available.
Comment 1 David Rosca 2015-09-26 20:15:24 UTC
Git commit 6bb4069a9a40c7cee7ad065263fdfbca34a352bf by David Rosca.
Committed on 26/09/2015 at 20:02.
Pushed by drosca into branch 'Plasma/5.4'.

kcm_keyboard: Fix behavior of layout config edit delegates

By default, commiting edited value in QStyledItemDelegate only occurs
when leaving the editor, eg. on pressing Enter or moving to other item.
This makes the delegates commit updated value to model as soon as value
in editor is changed.

This also fixes the size of label editor (it now fills the entire cell)
and refresh the label icons when refreshing model.
FIXED-IN: 5.4.2
REVIEW: 125405

M  +1    -1    kcms/keyboard/kcm_keyboard_widget.cpp
M  +18   -1    kcms/keyboard/kcm_view_models.cpp
M  +3    -0    kcms/keyboard/kcm_view_models.h

http://commits.kde.org/plasma-desktop/6bb4069a9a40c7cee7ad065263fdfbca34a352bf