kcms/keyboard/kcm_view_models.h
@@ -76,6 +76,9 @@ public:
 	QWidget *createEditor(QWidget *parent, const QStyleOptionViewItem &option,
 			const QModelIndex &index) const;
 
+	void updateEditorGeometry(QWidget *editor,
+			const QStyleOptionViewItem &option, const QModelIndex &index) const;
+
 //    void paint(QPainter *painter, const QStyleOptionViewItem &option, const QModelIndex &index) const;
 
 private:
